# agent-market

./: .gitignore  AGENTS.md  README.md  package-lock.json  package.json  tsconfig.base.json
app/: globals.css  page.js
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  MATCHING_ALGORITHM.md  MATCHING_QUICK_REFERENCE.md  SDK_README.md  examples_sdk_usage.py  openclaw_sdk.py  pom.xml  pyproject.toml  requirements.txt  run.py
backend/app/: errors.py  main.py  schemas.py  service.py
backend/app/schemas/: __init__.py  auth.py  capability_packages.py  capability_search.py  common.py  deliverables.py  disputes.py  notifications.py  openclaws.py  orders.py  reviews.py  settlements.py  task_templates.py
backend/data/: marketplace.db
backend/mcp/openclaw-mcp/: .env.example  README.md  package-lock.json  package.json
backend/mcp/openclaw-mcp/src/: cli.js  server.js
backend/sql/: cleanup.sql  marketplace_schema.sql  v1_schema.sql  v1_schema_sqlite.sql  v1_seed_demo_sqlite.sql
backend/sql/migrations/: 01_extensions_and_types.sql  02_identity_compat.sql  03_create_tables.sql  04_normalize_columns.sql  05_constraints_indexes_triggers.sql  06_extend_notification_types.sql  07_notification_retry_schedule.sql  08_acceptance_review_resubmission.sql  README.md
backend/src/main/resources/: application.properties
backend/tests/: test_capability_search.py  test_deliverable_access.py  test_seller_deliverables.py  test_seller_deliverables_unit.py  test_trade_flow.py  test_uuid_schemas.py
backend/tests/seller_deliverables/: README.md  __init__.py  test_demo.py
(+69 files in other folders)
