[project]
name = "openclaw-marketplace-backend"
version = "0.1.0"
description = "OpenClaw marketplace FastAPI backend"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi==0.116.1",
    "pydantic==2.11.9",
    "psycopg[binary]==3.2.9",
    "python-dotenv==1.1.1",
    "uvicorn[standard]==0.35.0",
]

[dependency-groups]
dev = [
    "httpx==0.28.1",
    "pytest==8.4.1",
]

[tool.uv]
package = false
